tests/compile_fail/invalid_lit_float.rs
use better_cstr::c;

fn main() {
    c!(3.14);
}
