tests/compile_fail/invalid_lit_float.stderr
error: Unsupported literal kind
 --> tests/compile_fail/invalid_lit_float.rs:4:8
  |
4 |     c!(3.14);
  |        ^^^^
